# Typest

./: .gitignore  CMakeLists.txt  README.md
Typest/: CMakeLists.txt
Typest/src/Typest/: main.cpp
